--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/carselfie.jpg" alt="Markus Fort Profile Picture" width="275" height="320" title="Markus is Sexy in Shades." /></td>
+      <td><img src="carselfie.jpg" alt="Markus Fort Profile Picture" width="250" height="300" title="Markus is Sexy in Shades." /></td>
       <td>
         <h1>Markus Fort</h1>
         <p>
